--- a/Register.css
+++ b/Register.css
@@ -6,13 +6,19 @@
     box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
 }
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
 
 .box{
     margin-left: auto;
     margin-right: auto;
-    width: 25rem;
+    width: 20rem;
     background-color: white;
-    box-shadow: 2px 2px 10px 2px rgb(247, 245, 245);
+    box-shadow: 2px 2px 10px 2px rgb(176, 173, 173);
     padding-bottom: 2rem;
     margin-top: 1rem;
     padding: 1.5rem;
